# fpm-on-wheels

./: pyproject.toml
.github/workflows/: wheel.yml
tools/wheels/: cibw_before_build_macos.sh
