[build-system]
requires = [
    "setuptools>=80.9.0",
    "scikit-build>=0.18.1",
    "cmake>=4.0.0",
    "ninja",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "fpm"
license = "MIT"
authors = [{ name = "fpm maintainers" }]
requires-python = ">=3.7"
description = "Fortran package manager"
readme = "docs/README.md"
keywords = ["fpm", "fortran", "package manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]
dynamic = ["version", "entry-points", "scripts"]

[project.urls]
homepage = "https://fpm.fortran-lang.org"
source-code = "https://github.com/fortran-lang/fpm"
bug-tracker = "https://github.com/fortran-lang/fpm/issues"

[tool.setuptools_scm]
write_to = "src/fpm/_version.py"

[tool.cibuildwheel]
build = "cp312-*"
# build-verbosity = 3

[tool.cibuildwheel.macos]
archs = ["native"]
environment = { CC = "clang", CXX = "clang++" }
before-build = "bash {project}/tools/wheels/cibw_before_build_macos.sh {project}"
repair-wheel-command = [
    "delocate-wheel",
    "--require-archs",
    "{delocate_archs}",
    "-w",
    "{dest_dir}",
    "-v",
    "{wheel}",
]

# Intel slice wants 10.9
[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.9", CFLAGS = "-mmacosx-version-min=10.9", FFLAGS = "-mmacosx-version-min=10.9" }

# Apple-Silicon slice wants 11.0
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", CFLAGS = "-mmacosx-version-min=11.0", FFLAGS = "-mmacosx-version-min=11.0" }

[tool.cibuildwheel.windows]
archs = ["auto64"]
environment = { CC = "gcc", CXX = "g++", FC = "gfortran" }
